--- a/index.html
+++ b/index.html
@@ -453,10 +453,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 <li><a href="#section-architecture-constraints">2. Architecture Constraints</a></li>
-<li><a href="#section-context-and-scope">3. Context and Scope</a>
+<li><a href="#section-context-and-scope">3. Contexto y Alcance</a>
 <ul class="sectlevel2">
-<li><a href="#_business_context">3.1. Business Context</a></li>
-<li><a href="#_technical_context">3.2. Technical Context</a></li>
+<li><a href="#_contexto_de_negocio">3.1. Contexto de Negocio</a></li>
+<li><a href="#_contexto_técnico">3.2. Contexto Técnico</a></li>
 </ul>
 </li>
 <li><a href="#section-solution-strategy">4. Solution Strategy</a></li>
@@ -740,101 +740,258 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-context-and-scope">3. Context and Scope</h2>
+<h2 id="section-context-and-scope">3. Contexto y Alcance</h2>
 <div class="sectionbody">
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
-<div class="title">Contents</div>
-<p>Context and scope - as the name suggests - delimits your system (i.e. your scope) from all its communication partners
-(neighboring systems and users, i.e. the context of your system). It thereby specifies the external interfaces.</p>
+<div class="title">Contenido</div>
+<p>El ámbito y contexto del sistema, como su nombre lo indica, delimita el sistema (es decir, su ámbito) de todos
+sus interlocutores (sistemas y usuarios vecinos, es decir, el contexto del sistema). De este modo, especifica las interfaces externas.</p>
 </div>
 <div class="paragraph">
-<p>If necessary, differentiate the business context (domain specific inputs and outputs) from the technical context (channels, protocols, hardware).</p>
+<p>Si es necesario, diferencie el contexto empresarial (entradas y salidas específicas del dominio) del contexto técnico (canales, protocolos, hardware)..</p>
 </div>
 <div class="paragraph">
-<div class="title">Motivation</div>
-<p>The domain interfaces and technical interfaces to communication partners are among your system&#8217;s most critical aspects. Make sure that you completely understand them.</p>
+<div class="title">Motivación</div>
+<p>Las interfaces de dominio y las interfaces técnicas con los socios de comunicación se encuentran entre los aspectos más críticos de su sistema. Asegúrese de comprenderlas por completo.</p>
 </div>
 <div class="paragraph">
-<div class="title">Form</div>
-<p>Various options:</p>
+<div class="title">Forma</div>
+<p>Varias opciones:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Context diagrams</p>
+<p>Varios diagramas de contexto</p>
 </li>
 <li>
-<p>Lists of communication partners and their interfaces.</p>
+<p>Listas de socios de comunicación y sus interfaces.</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<div class="title">Further Information</div>
-<p>See <a href="https://docs.arc42.org/section-3/">Context and Scope</a> in the arc42 documentation.</p>
+<div class="title">Más información</div>
+<p>Vea <a href="https://docs.arc42.org/section-3/">Context and Scope</a> en la documentación arc42.</p>
 </div>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_business_context">3.1. Business Context</h3>
+<h3 id="_contexto_de_negocio">3.1. Contexto de Negocio</h3>
+<div class="imageblock">
+<div class="content">
+<img src="./images/png.png" alt="png" width="744" height="315">
+</div>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 66.6667%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Elemento</th>
+<th class="tableblock halign-left valign-top">Descripción</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Usuario</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>El concursante que interactúa con la aplicación, juega y recibe pistas.</em></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Base de Datos</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Sistema de almacenamiento que guarda información relevante sobre el usuario.</em></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>WIChat</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Aplicación web principal donde se desarrolla el juego.</em></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Wikidata</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Fuente de donde se extraen las preguntas, las imágenes y las respuestas.</em></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>LLM_API</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>API que integra un modelo de lenguaje que se utiliza para generar pistas dinámicas y conversacionales que ayudan al concursante a responder las preguntas.</em></p></td>
+</tr>
+</tbody>
+</table>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
-<div class="title">Contents</div>
-<p>Specification of <strong>all</strong> communication partners (users, IT-systems, &#8230;&#8203;) with explanations of domain specific inputs and outputs or interfaces.
-Optionally you can add domain specific formats or communication protocols.</p>
+<div class="title">Contenido</div>
+<p>Especificación de todos los interlocutores (usuarios, sistemas informáticos, etc.) con explicaciones de las entradas y salidas o interfaces específicas del dominio.
+Opcionalmente, puede añadir formatos o protocolos de comunicación específicos del dominio.</p>
 </div>
 <div class="paragraph">
-<div class="title">Motivation</div>
-<p>All stakeholders should understand which data are exchanged with the environment of the system.</p>
+<div class="title">Motivación</div>
+<p>Todas las partes interesadas deben comprender qué datos se intercambian con el entorno del sistema.</p>
 </div>
 <div class="paragraph">
-<div class="title">Form</div>
-<p>All kinds of diagrams that show the system as a black box and specify the domain interfaces to communication partners.</p>
+<div class="title">Forma</div>
+<p>Todo tipo de diagramas que muestran el sistema como una caja negra y especifican las interfaces del dominio con los socios de comunicación.</p>
 </div>
 <div class="paragraph">
-<p>Alternatively (or additionally) you can use a table.
-The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.</p>
+<p>Como alternativa (o adicionalmente), puede utilizar una tabla.
+El título de la tabla es el nombre de su sistema, las tres columnas contienen el nombre del interlocutor, las entradas y las salidas.</p>
 </div>
 </div>
-</div>
-<div class="paragraph">
-<p><strong>&lt;Diagram or Table&gt;</strong></p>
-</div>
-<div class="paragraph">
-<p><strong>&lt;optionally: Explanation of external domain interfaces&gt;</strong></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_technical_context">3.2. Technical Context</h3>
+<h3 id="_contexto_técnico">3.2. Contexto Técnico</h3>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
-<div class="title">Contents</div>
-<p>Technical interfaces (channels and transmission media) linking your system to its environment. In addition a mapping of domain specific input/output to the channels, i.e. an explanation which I/O uses which channel.</p>
+<div class="title">Contenido</div>
+<p>Interfaces técnicas (canales y medios de transmisión) que juntan el sistema con su entorno. Además un mapeo del dominio especifico de entrada/salida a los canales, es decir una explicación de qué entrada salida usa cada canal.</p>
 </div>
 <div class="paragraph">
-<div class="title">Motivation</div>
-<p>Many stakeholders make architectural decision based on the technical interfaces between the system and its context. Especially infrastructure or hardware designers decide these technical interfaces.</p>
+<div class="title">Motivación</div>
+<p>Muchos stakeholders toman decisiones arquitectónicas basadas en las interfaces técnicas entre el sistema y su contexto. En especial, los diseñadores de hardware o infraestructura deciden estas interfaces técnicas.</p>
 </div>
 <div class="paragraph">
-<div class="title">Form</div>
-<p>E.g. UML deployment diagram describing channels to neighboring systems,
-together with a mapping table showing the relationships between channels and input/output.</p>
+<div class="title">Forma</div>
+<p>E.g. Diagrama UML de despliegue describiendo canales con los sistemas vecinos,
+junto a una tabla de mapeo mostrando las relaciones entre canales y la entrada/salida.</p>
 </div>
 </div>
 </div>
+<div class="sect3">
+<h4 id="_diagrama_de_despliegue">3.2.1. Diagrama de Despliegue</h4>
+<div class="imageblock">
+<div class="content">
+<img src="./images/diagrama-despliegue.png" alt="diagrama despliegue" width="854" height="722">
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_explicación_de_interfaces_técnicas">3.2.2. Explicación de Interfaces Técnicas</h4>
+<div class="sect4">
+<h5 id="_gateway">Gateway</h5>
 <div class="paragraph">
-<p><strong>&lt;Diagram or Table&gt;</strong></p>
+<p>API que hace de enlace entre las distintas partes de la aplicación</p>
 </div>
+</div>
+<div class="sect4">
+<h5 id="_aplicación_react">Aplicación React</h5>
 <div class="paragraph">
-<p><strong>&lt;optionally: Explanation of technical interfaces&gt;</strong></p>
+<p>Aplicación web hecha con React que aporta al usuario una interfaz con la que interactuar y por medio de la cual hacer las peticiones
+correspondientes al backend</p>
 </div>
+</div>
+<div class="sect4">
+<h5 id="_base_de_datos_de_usuarios">Base de Datos de Usuarios</h5>
 <div class="paragraph">
-<p><strong>&lt;Mapping Input/Output to Channels&gt;</strong></p>
+<p>Base de datos que almacena toda la información referente a los usuarios como su nombre de usuario, sus datos de logIn, su histórico de partidas, etc</p>
 </div>
+</div>
+<div class="sect4">
+<h5 id="_servicio_de_autenticación">Servicio de Autenticación</h5>
+<div class="paragraph">
+<p>Interfaz que se comunica con la base de datos de usuarios a fin de comprobar si los datos introducidos de inicio de sesión
+se corresponden con un usuario relaciones</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_servicio_de_usuario">Servicio de Usuario</h5>
+<div class="paragraph">
+<p>Interfaz que se comunica con la base de datos de usuarios a fin de consultar y actualizar la información referente a los usuarios y
+sus partidas</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_servicio_llm">Servicio LLM</h5>
+<div class="paragraph">
+<p>Servicio que, por medio de las pistas obtenidas de WikiData, procesará y responderá a las pistas que pida el usuario</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_api_wikidata">API WikiData</h5>
+<div class="paragraph">
+<p>API del servicio web WikiData que aportará a la aplicación las imágenes para el juego, las respuestas a las mismas y las
+pistas que el LLM utilizará para responder a los usuarios</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_prometheus">Prometheus</h5>
+<div class="paragraph">
+<p>Interfaz que almacena en su base de datos optimizada las métricas traidas de la Gateway</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_grafana">Grafana</h5>
+<div class="paragraph">
+<p>Interfaz que por medio de consultas a Prometheus, muestra gráficamente los datos obtenidos de las mismas</p>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_mapeo_de_canales_de_entradasalida">3.2.3. Mapeo de Canales de Entrada/salida</h4>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 20%;">
+<col style="width: 40%;">
+<col style="width: 40%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Canal</th>
+<th class="tableblock halign-left valign-top">Entrada</th>
+<th class="tableblock halign-left valign-top">Salida</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Aplicación React</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Peticiones HTTP del usuario indicando sus acciones</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Responde con información a través de la interfaz.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Gateway</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Peticiones REST de webapp para obtener datos como imágenes y respuestas o solicitar operaciones como iniciar sesión</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Respuesta con la información solicitada.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Servicio Autenticación</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Datos de inicio de sesión de un usuario</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Consulta de comprobación de los datos de inicio de sesión</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Servicio Usuario</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Datos a consultar o insertar en la base de datos</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Consulta o inserción completa a la base de datos</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Base de Datos de Usuarios</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Instrucciones SQL para consultas o insercioes</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Resultado de las consultas o confirmación de las inserciones</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Servicio LLM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Prompt de solicitud de pistas</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Pista generada por el modelo a partir de información de Wikidata</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">API Wikidata</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Solicitud de imagenes o pistas</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Imagen nueva, respuesta o pista sobre la imagen ofrecida con anterioridad</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Prometheus</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Métricas de Gateway</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Almacenamiento de las métricas en su base de datos</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Grafana</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Métricas organizadas en Prometheus</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Gráficos de visualización de las métricas</p></td>
+</tr>
+</tbody>
+</table>
 <div style="page-break-after: always;"></div>
+</div>
 </div>
 </div>
 </div>
@@ -1271,7 +1428,7 @@ building block instances depicted in this diagram.&gt;</em></p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="332" height="335">
+<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="353" height="328">
 </div>
 </div>
 </div>
@@ -1804,7 +1961,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-02-04 13:27:45 +0100
+Last updated 2025-01-28 14:23:23 +0100
 </div>
 </div>
 </body>
