--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@ sus interlocutores (sistemas y usuarios vecinos, es decir, el contexto del siste
 <h3 id="_contexto_de_negocio">3.1. Contexto de Negocio</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/png.png" alt="png" width="744" height="315">
+<img src="./images/png.png" alt="png" width="699" height="321">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1037,7 +1037,7 @@ junto a una tabla de mapeo mostrando las relaciones entre canales y la entrada/s
 <h4 id="_diagrama_de_despliegue">3.2.1. Diagrama de Despliegue</h4>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diagrama-despliegue.png" alt="diagrama despliegue" width="854" height="722">
+<img src="./images/diagrama-despliegue.png" alt="Diagrama de Despliegue">
 </div>
 </div>
 </div>
@@ -1083,22 +1083,16 @@ sus partidas</p>
 </div>
 </div>
 <div class="sect4">
+<h5 id="_api_llm">API LLM</h5>
+<div class="paragraph">
+<p>Servicio externo que nos permite acceder al modelo de lenguaje y utilizarlo</p>
+</div>
+</div>
+<div class="sect4">
 <h5 id="_api_wikidata">API WikiData</h5>
 <div class="paragraph">
 <p>API del servicio web WikiData que aportará a la aplicación las imágenes para el juego, las respuestas a las mismas y las
 pistas que el LLM utilizará para responder a los usuarios</p>
-</div>
-</div>
-<div class="sect4">
-<h5 id="_prometheus">Prometheus</h5>
-<div class="paragraph">
-<p>Interfaz que almacena en su base de datos optimizada las métricas traidas de la Gateway</p>
-</div>
-</div>
-<div class="sect4">
-<h5 id="_grafana">Grafana</h5>
-<div class="paragraph">
-<p>Interfaz que por medio de consultas a Prometheus, muestra gráficamente los datos obtenidos de las mismas</p>
 </div>
 </div>
 </div>
@@ -1149,19 +1143,14 @@ pistas que el LLM utilizará para responder a los usuarios</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Pista generada por el modelo a partir de información de Wikidata</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">API LLM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Prompt de solicitu de pistas</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Respuesta del modelo de lenguaje generada a partir del prompt</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">API Wikidata</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Solicitud de imagenes o pistas</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Imagen nueva, respuesta o pista sobre la imagen ofrecida con anterioridad</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Prometheus</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Métricas de Gateway</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Almacenamiento de las métricas en su base de datos</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Grafana</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Métricas organizadas en Prometheus</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Gráficos de visualización de las métricas</p></td>
 </tr>
 </tbody>
 </table>
@@ -1603,7 +1592,7 @@ building block instances depicted in this diagram.&gt;</em></p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="353" height="328">
+<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="332" height="335">
 </div>
 </div>
 </div>
@@ -2136,7 +2125,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-02-18 13:08:22 +0100
+Last updated 2025-02-18 17:28:02 +0100
 </div>
 </div>
 </body>
