--- a/index.html
+++ b/index.html
@@ -519,7 +519,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_escenarios_de_calidad">10.2. Escenarios de calidad</a></li>
 </ul>
 </li>
-<li><a href="#section-technical-risks">11. Riesgos y Deuda Técnica</a></li>
+<li><a href="#section-technical-risks">11. Riesgos y Deuda Técnica</a>
+<ul class="sectlevel2">
+<li><a href="#section-testing-report">11.1. Test unitarios</a></li>
+<li><a href="#_test_e2e">11.2. Test E2E</a></li>
+<li><a href="#_test_de_carga">11.3. Test de carga</a></li>
+</ul>
+</li>
 <li><a href="#section-glossary">12. Glosario</a></li>
 </ul>
 </div>
@@ -1308,13 +1314,13 @@ el usuario por medio de pistas, sin dar dicha respuesta correcta directamente</p
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Motivación</strong>: La elección de <em><strong>SPARQL</strong></em> permite integrar consultas semánticas eficientes a bases de datos con información estructurada. Además, utilizamos la <em><strong>API de Gemini</strong></em> debido a los problemas recurrentes de caídas de los servidores de <em>Empathy</em>, lo que hace que la solución basada en <em>Gemini</em> sea más confiable. Esta decisión ayuda a garantizar la disponibilidad del sistema y evitar puntos de fallo únicos. También integramos la API de PayPal para gestionar un apartado de donaciones, proporcionando una forma segura y ampliamente reconocida para que los usuarios puedan apoyar el proyecto.</p>
+<p><strong>Motivación</strong>: La elección de <em><strong>SPARQL</strong></em> permite integrar consultas semánticas eficientes a bases de datos con información estructurada. Además, utilizamos la <em><strong>API de Gemini</strong></em> debido a los problemas recurrentes de caídas de los servidores de <em>Empathy</em>, lo que hace que la solución basada en <em>Gemini</em> sea más confiable. Esta decisión ayuda a garantizar la disponibilidad del sistema y evitar puntos de fallo únicos. También integramos la <em><strong>API de PayPal</strong></em> para gestionar un apartado de donaciones, proporcionando una forma segura y ampliamente reconocida para que los usuarios puedan apoyar el proyecto.</p>
 </li>
 <li>
 <p><strong>Objetivos de calidad</strong>: <em>Disponibilidad</em>, <em>Fiabilidad</em>, <em>Rendimiento</em>, <em>Seguridad</em></p>
 </li>
 <li>
-<p><strong>Restricciones clave</strong>: La <em>API de Gemini</em> debe integrarse de manera eficiente con el sistema, proporcionando una solución confiable en lugar de las APIs de <em>Empathy</em> que presentan interrupciones. La API de PayPal debe cumplir con los requisitos de seguridad y privacidad en el manejo de transacciones financieras.</p>
+<p><strong>Restricciones clave</strong>: La <em>API de Gemini</em> debe integrarse de manera eficiente con el sistema, proporcionando una solución confiable en lugar de las APIs de <em>Empathy</em> que presentan interrupciones. La <em>API de PayPal</em> debe cumplir con los requisitos de seguridad y privacidad en el manejo de transacciones financieras.</p>
 </li>
 </ul>
 </div>
@@ -1411,6 +1417,22 @@ el usuario por medio de pistas, sin dar dicha respuesta correcta directamente</p
 </li>
 <li>
 <p><strong>Restricciones clave</strong>: El sistema debe soportar un alto volumen de tráfico sin afectar la experiencia del usuario ni comprometer la estabilidad.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_nombre_de_dominio">4.1.11. Nombre de Dominio</h4>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Motivación</strong>: Se adquirió un nombre de dominio personalizado (<em><strong>wichat-es4a.es</strong></em>) para mejorar la accesibilidad y profesionalismo del sistema, facilitando a los usuarios el acceso a la aplicación mediante una URL clara y memorable.</p>
+</li>
+<li>
+<p><strong>Objetivos de calidad</strong>: <em>Usabilidad</em>, <em>Disponibilidad</em>, <em>Seguridad</em></p>
+</li>
+<li>
+<p><strong>Restricciones clave</strong>: El dominio debe estar correctamente configurado en los registros DNS y asociado a la infraestructura desplegada en <em>AWS</em>.</p>
 </li>
 </ul>
 </div>
@@ -2807,6 +2829,64 @@ asegurándonos de que cada servicio solo modifique los datos que le corresponden
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
+<div class="sect2">
+<h3 id="section-testing-report">11.1. Test unitarios</h3>
+<div class="paragraph">
+<p>Cada componente del Front-End tiene sus correspondientes pruebas unitarias que verfican que funciona correctamente, proporcionando seguridad, fiabilidad y consistencia al proyecto realizado.</p>
+</div>
+<div class="paragraph">
+<p><strong>Cobertura de código</strong></p>
+</div>
+<div class="paragraph">
+<p>Para la cobertura de código utilizamos la herramienta SonarQube.Esta herramienta ofrece una métrica que indica qué porcentaje del código fuente ha sido ejecutado por las pruebas automatizadas (unitarias, de integración, etc.). Es un indicador clave de la calidad del software y de cuán bien está siendo probado.
+Para este proyecto nos piden un 80% de cobertura de código y menos de un 3% de duplicación. En la siguiente imagen vemos como cumplimos con estos dos parámetros:</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/sonarqube.png" alt="Imagen SonarQube" width="600">
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_test_e2e">11.2. Test E2E</h3>
+<div class="paragraph">
+<p>Los tests end-to-end (E2E) se utilizan para verificar que toda la aplicación funciona correctamente desde la perspectiva del usuario final. Simulan escenarios reales de uso, interactuando con la interfaz tal como lo haría un usuario, para asegurar que todos los componentes del sistema (frontend, backend, base de datos, etc.) funcionan como se espera.</p>
+</div>
+<div class="paragraph">
+<p>En nuestro proyecto hemos incorporado los siguientes casos de prueba E2E:</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><strong>Cambio de contraseña: </strong>
+Verifica el correcto funcionamiento del formulario de cambio de contraseña, incluyendo los casos de éxito y los principales errores de validación: coincidencia entre contraseñas, longitud mínima, uso de mayúsculas, números, espacios y manejo de errores en la contraseña actual.</p>
+</li>
+<li>
+<p><strong>Simulación de un juego: </strong>
+Verifica que el usuario pueda configurar e iniciar una partida con distintas opciones, completar o salir de ella antes de tiempo, consultar el historial de partidas jugadas y solicitar pistas al modelo LLM durante la partida.</p>
+</li>
+<li>
+<p><strong>Inicio de sesión: </strong>
+Comprueba que el sistema gestione correctamente intentos de inicio de sesión con credenciales inválidas, incluyendo la visualización de mensajes de error y la limitación de intentos fallidos por motivos de seguridad.</p>
+</li>
+<li>
+<p><strong>Registro de usuario: </strong>
+Verifica que un nuevo usuario pueda completar el formulario de registro correctamente y que el sistema gestione adecuadamente errores comunes como contraseñas inválidas, contraseñas no coincidentes y nombres de usuario ya registrados.</p>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_test_de_carga">11.3. Test de carga</h3>
+<div class="paragraph">
+<p>Los tests de carga miden el rendimiento antes de la carga normal o de carga máxima. Para llevar a cabo estas pruebas hemos utilizado la herramienta Artillery. Mediante ficheros .yml podíamos especificar todos los escenarios posibles.</p>
+</div>
+<div class="paragraph">
+<p>Toda la información sobre las pruebas realizadas en nuestro trabajo aparece en el este enlace:
+<a href="../pdfs/Informe_Resultados_Pruebas_De_Carga.pdf">Informe de resultados de pruebas de carga en PDF</a></p>
+</div>
+<div style="page-break-after: always;"></div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2942,7 +3022,7 @@ servicios como protección al comprador y al vendedor.</em></p></td>
 <div id="footer">
 <div id="footer-text">
 Version 8.2 ES<br>
-Last updated 2025-05-02 10:30:22 +0200
+Last updated 2025-05-04 18:10:54 +0200
 </div>
 </div>
 </body>
