--- a/index.html
+++ b/index.html
@@ -519,14 +519,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_escenarios_de_calidad">10.2. Escenarios de calidad</a></li>
 </ul>
 </li>
-<li><a href="#section-technical-risks">11. Riesgos y Deuda Técnica</a>
+<li><a href="#section-technical-risks">11. Riesgos y Deuda Técnica</a></li>
+<li><a href="#section-testing-report">12. Test unitarios</a>
 <ul class="sectlevel2">
-<li><a href="#section-testing-report">11.1. Test unitarios</a></li>
-<li><a href="#_test_e2e">11.2. Test E2E</a></li>
-<li><a href="#_test_de_carga">11.3. Test de carga</a></li>
+<li><a href="#_test_e2e">12.1. Test E2E</a></li>
+<li><a href="#_test_de_carga">12.2. Test de carga</a></li>
 </ul>
 </li>
-<li><a href="#section-glossary">12. Glosario</a></li>
+<li><a href="#section-glossary">13. Glosario</a></li>
 </ul>
 </div>
 </div>
@@ -2829,8 +2829,11 @@ asegurándonos de que cada servicio solo modifique los datos que le corresponden
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
-<div class="sect2">
-<h3 id="section-testing-report">11.1. Test unitarios</h3>
+</div>
+</div>
+<div class="sect1">
+<h2 id="section-testing-report">12. Test unitarios</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>Cada componente del Front-End tiene sus correspondientes pruebas unitarias que verfican que funciona correctamente, proporcionando seguridad, fiabilidad y consistencia al proyecto realizado.</p>
 </div>
@@ -2846,9 +2849,8 @@ Para este proyecto nos piden un 80% de cobertura de código y menos de un 3% de 
 <img src="./images/sonarqube.png" alt="Imagen SonarQube" width="600">
 </div>
 </div>
-</div>
 <div class="sect2">
-<h3 id="_test_e2e">11.2. Test E2E</h3>
+<h3 id="_test_e2e">12.1. Test E2E</h3>
 <div class="paragraph">
 <p>Los tests end-to-end (E2E) se utilizan para verificar que toda la aplicación funciona correctamente desde la perspectiva del usuario final. Simulan escenarios reales de uso, interactuando con la interfaz tal como lo haría un usuario, para asegurar que todos los componentes del sistema (frontend, backend, base de datos, etc.) funcionan como se espera.</p>
 </div>
@@ -2877,7 +2879,7 @@ Verifica que un nuevo usuario pueda completar el formulario de registro correcta
 </div>
 </div>
 <div class="sect2">
-<h3 id="_test_de_carga">11.3. Test de carga</h3>
+<h3 id="_test_de_carga">12.2. Test de carga</h3>
 <div class="paragraph">
 <p>Los tests de carga miden el rendimiento antes de la carga normal o de carga máxima. Para llevar a cabo estas pruebas hemos utilizado la herramienta Artillery. Mediante ficheros .yml podíamos especificar todos los escenarios posibles.</p>
 </div>
@@ -2890,7 +2892,7 @@ Verifica que un nuevo usuario pueda completar el formulario de registro correcta
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-glossary">12. Glosario</h2>
+<h2 id="section-glossary">13. Glosario</h2>
 <div class="sectionbody">
 <div class="sidebarblock arc42help">
 <div class="content">
@@ -3022,7 +3024,7 @@ servicios como protección al comprador y al vendedor.</em></p></td>
 <div id="footer">
 <div id="footer-text">
 Version 8.2 ES<br>
-Last updated 2025-05-04 18:10:54 +0200
+Last updated 2025-05-04 18:11:41 +0200
 </div>
 </div>
 </body>
