--- a/index.html
+++ b/index.html
@@ -1633,7 +1633,7 @@ Por lo tanto, contiene la descripción de caja blanca de bloques de construcció
 <h3 id="_nivel_1_caja_blanca_del_sistema_general">5.1. Nivel 1: Caja blanca del Sistema General</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/building_block_view1.png" alt="building block view1" width="990" height="638">
+<img src="./images/building_block_view1.png" alt="building block view1" width="1001" height="638">
 </div>
 </div>
 <div class="dlist">
@@ -1684,7 +1684,7 @@ Por lo tanto, contiene la descripción de caja blanca de bloques de construcció
 <h3 id="_nivel_2">5.2. Nivel 2</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/building_block_view2.png" alt="building block view2" width="994" height="638">
+<img src="./images/building_block_view2.png" alt="building block view2" width="1004" height="638">
 </div>
 </div>
 <div class="dlist">
@@ -1723,7 +1723,7 @@ Por lo tanto, contiene la descripción de caja blanca de bloques de construcció
 <h3 id="_nivel_3">5.3. Nivel 3</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/building_block_view3.png" alt="building block view3" width="990" height="638">
+<img src="./images/building_block_view3.png" alt="building block view3" width="1011" height="638">
 </div>
 </div>
 <div class="dlist">
@@ -2885,7 +2885,7 @@ Verifica que un nuevo usuario pueda completar el formulario de registro correcta
 </div>
 <div class="paragraph">
 <p>Toda la información sobre las pruebas realizadas en nuestro trabajo aparece en el este enlace:
-<a href="../pdfs/Informe_Resultados_Pruebas_De_Carga.pdf">Informe de resultados de pruebas de carga en PDF</a></p>
+<a href="pdfs/Informe_Resultados_Pruebas_De_Carga.pdf">Informe de resultados de pruebas de carga en PDF</a></p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
